Fix the bug of menu active item overlaping

--- a/client/global-flow-platform/globalflow/static/css/style.css
+++ b/client/global-flow-platform/globalflow/static/css/style.css
@@ -41,6 +41,7 @@ body {
   background: #4d5bf9;
   transition: width 0.5s;
   overflow-x: hidden;
+  overflow-y: visible;
   z-index: 10;
 }
 
@@ -121,6 +122,7 @@ body {
   display: flex;
   text-decoration: none;
   color: #f0f8ff;
+  z-index: 1;
 }
 
 .navigation ul li.active a {
@@ -129,16 +131,16 @@ body {
 
 .navigation ul li a .icon {
   position: relative;
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   min-width: 60px;
   height: 60px;
-  line-height: 70px;
   text-align: center;
 }
 
 .navigation ul li a .icon ion-icon {
     font-size: 1.5em;
-    vertical-align: middle;
 }
 
 .navigation ul li a .title {
